Created home design
- Added wefox-header-logo image
- Added wefox-logo-icon image
- Added bcn-time-lapse video
- Changed home design
- Added styles in .scss

--- a/src/pages/home/home.component.html
+++ b/src/pages/home/home.component.html
@@ -1,3 +1,26 @@
-<p>
-  home works!
-</p>
+<div class="main-container-home" #done>
+  <div class="row container-header">
+    <div class="container-header__logo">
+      <img src="../../assets/img/wefox-header-logo.svg" alt="Wefox Logo">
+    </div>
+  </div>
+  <div class="row container-video">
+    <div #div class="container-video__box">
+      <video  class="container-video__box__content" autoplay muted id="homeVideo" #homeVideo>
+        <source src="../../assets/video/bcn-time-lapse.mp4" type="video/mp4" alt="Wefox Video">
+      </video>
+    </div>
+  </div>
+  <div class="row container-icon">
+    <div class="container-icon__content">
+      <img class="container-icon__content__img" src="../../assets/img/wefox-logo-icon.png" alt="Wefox Icon">
+    </div>
+  </div>
+  <div class="row container-button">
+      <a class="button effect">Post List</a>
+  </div>
+  <div class="row container-main-slash">
+  </div>
+  <div class="row container-sub-slash">
+  </div>
+</div>
