Improved Home Design
- Created container-button class that has embed __over and __under slash.
- Changed logo scale

--- a/src/pages/home/home.component.html
+++ b/src/pages/home/home.component.html
@@ -19,8 +19,10 @@
   <div class="row container-button">
       <a class="button effect">Post List</a>
   </div>
-  <div class="row container-main-slash">
-  </div>
-  <div class="row container-sub-slash">
+  <div class="container-slash">
+    <div class="container-slash__over">
+    </div>
+    <div class="container-slash__under">
+    </div>
   </div>
 </div>
