Created new component Post
- Just created the new component and added in the modules and the navigate option from home page.
- Posts Works is now visible.

--- a/src/pages/home/home.component.html
+++ b/src/pages/home/home.component.html
@@ -17,7 +17,7 @@
     </div>
   </div>
   <div class="row container-button">
-      <a class="button effect">Post List</a>
+      <a class="button effect" (click)="goToPostsList()">Post List</a>
   </div>
   <div class="container-slash">
     <div class="container-slash__over">
