--- a/src/pages/posts/posts.component.html
+++ b/src/pages/posts/posts.component.html
@@ -1,3 +1,22 @@
-<p>
-  posts works!
-</p>
+<div class="main-container-posts fadeIn animated" *ngIf="isLoaded; else loader" #done>
+  <div class="row container-header">
+    <div class="container-header__container">
+      <img class="container-header__container__logo" src="../../assets/img/wefox-header-logo.svg" alt="Wefox Logo">
+    </div>
+  </div>
+  <div class="row container-cards">
+    <div class="card-header" *ngFor="let post of posts;">
+      <div class="card-body container-cards__single">
+        <h5 class="card-title">{{ post?.title }}</h5>
+        <img class="card-img-top container-cards__single__img" [src]="post?.image_url" alt="{{ post?.title }} image">
+        <p class="card-text">{{ post?.content }}</p>
+      </div>
+    </div>
+  </div>
+</div>
+<div #loader *ngIf="!isLoaded; else done" class="lds-ellipsis">
+  <div></div>
+  <div></div>
+  <div></div>
+  <div></div>
+</div>
