Added click functions
- Now it's possible to go home if you click on the header logo.
- Added a new button "Create post"

--- a/src/pages/posts/posts.component.html
+++ b/src/pages/posts/posts.component.html
@@ -1,9 +1,12 @@
 <div class="main-container-posts fadeIn animated" *ngIf="isLoaded; else loader" #done>
   <div class="row container-header">
-    <div class="container-header__container">
+    <div class="container-header__container" (click)="goHome()">
       <img class="container-header__container__logo" src="../../assets/img/wefox-header-logo.svg" alt="Wefox Logo">
     </div>
   </div>
+  <div class="row container-new-post">
+    <button class="btn container-new-post__btn" type="button" (click)="createPost()"  >Create post</button>
+</div>
   <div class="row container-cards">
     <div class="card-header" *ngFor="let post of posts;">
       <div class="card-body container-cards__single">
