--- a/src/pages/posts/posts.component.html
+++ b/src/pages/posts/posts.component.html
@@ -13,6 +13,11 @@
         <h5 class="card-title">{{ post?.title }}</h5>
         <img class="card-img-top container-cards__single__img" [src]="post?.image_url" alt="{{ post?.title }} image">
         <p class="card-text">{{ post?.content }}</p>
+        <nav class="nav nav-pills nav-justified">
+          <a class="nav-item container-cards__single__btn">View</a>
+          <a class="nav-item container-cards__single__btn" (click)="editPost(post)">Edit</a>
+          <a class="nav-item container-cards__single__btn">Remove</a>
+        </nav>
       </div>
     </div>
   </div>
