Implemented post page config/design
- Created no-image pipe, just control if the image is empty, but if the image return an error we have (onerror)  in order to check it.
- Improved single post page design
- Improved posts page design
- Added AgmCoreModule into Sharemodule

--- a/src/pages/posts/post/post.component.scss
+++ b/src/pages/posts/post/post.component.scss
@@ -22,4 +22,28 @@
       }
     }
   }
+  .container-card {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: stretch;
+    margin: 17vh 1vw 4vh 1vw;
+    width: 80%;
+    &__box {
+      width: 100%;
+      &__img {
+        height: 64vh;
+        width: 100%;
+      }
+      &__body {
+        &__button {
+          color: white;
+        }
+      }
+    }
+  }
+}
+
+agm-map {
+  height: 300px;
 }
