--- a/src/pages/posts/posts.component.scss
+++ b/src/pages/posts/posts.component.scss
@@ -55,7 +55,7 @@
         box-shadow: 0 5px 30px rgba(0, 0, 0, 1);
       }
       .card-body {
-        padding: 1rem 0 0 0;
+        padding: 1rem 0 1rem 0;
         .card-text {
           white-space: nowrap;
           overflow: hidden;
