--- a/src/shared/modal/modal.component.scss
+++ b/src/shared/modal/modal.component.scss
@@ -1,6 +1,8 @@
+@import 'src/styles/variables';
+
 .container-modal {
   padding: 0;
   .modal-header {
-    background: #ff9f00;
+    background: $main_orange;
   }
 }
