--- a/src/pages/posts/post/post.component.scss
+++ b/src/pages/posts/post/post.component.scss
@@ -1,14 +1,16 @@
+@import 'src/styles/styles';
+
 .main-container-post {
   display: flex;
   flex-direction: column;
   align-items: center;
   height: 100%;
   width: 100%;
-  background: #ff9f00;
+  background: $main_orange;
   .container-header {
     position: absolute;
     width: 100%;
-    background: white;
+    background: $single_white;
     height: 13vh;
     width: 100%;
     margin: 0px;
@@ -37,7 +39,7 @@
       }
       &__body {
         &__button {
-          color: white;
+          color: $single_white;
         }
       }
     }
