--- a/src/pages/home/home.component.html
+++ b/src/pages/home/home.component.html
@@ -19,10 +19,4 @@
     </div>
   </div>
 </div>
-
-<div class="lds-ellipsis" *ngIf="!isLoaded; else done" #loader >
-  <div></div>
-  <div></div>
-  <div></div>
-  <div></div>
-</div>
+<app-loader *ngIf="!isLoaded; else done" #loader></app-loader>
