--- a/src/pages/posts/post/post.component.html
+++ b/src/pages/posts/post/post.component.html
@@ -20,9 +20,5 @@
     </div>
   </div>
 </div>
-<div #loader *ngIf="!isLoaded; else done" class="lds-ellipsis">
-  <div></div>
-  <div></div>
-  <div></div>
-  <div></div>
-</div>
+<app-loader *ngIf="!isLoaded; else done" #loader></app-loader>
+
