--- a/src/pages/posts/posts.component.scss
+++ b/src/pages/posts/posts.component.scss
@@ -42,13 +42,14 @@
   .container-cards {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
-    align-items: stretch;
+    justify-content: self;
+    align-items: center;
+    justify-content: safe;
     margin: 21vh 11vw 13vh 11vw;
-    padding-right: 3vw;
+    padding-left: 3vw;
     .card-header {
       width: 21rem;
-      margin: 34px 0px -5px 17px;
+      margin: 34px 2vw -5px 17px;
       box-shadow: 0 1px 2px rgba(0, 0, 0, 0.15);
       transition: box-shadow 0.3s ease-in-out;
       background: white;
